--- a/style.css
+++ b/style.css
@@ -71,6 +71,10 @@ canvas
     transform: translate(-50%, -50%);
 	text-align: center;
   }
+
+  .wrapper h2 {
+    padding-top: 10px;
+}
   
   a{
 	text-decoration: none;
@@ -78,8 +82,7 @@ canvas
   }
 
   .menu-wrapper div {
-    padding-bottom: 20px;
-    font-family: 'Caesar Dressing', cursive;
+    font-family: 'Poppins', sans-serif;
     font-size: 50px;
 	letter-spacing: 1.5px;
 	font-weight: normal;
@@ -231,10 +234,10 @@ h2 {
 	  }
 	  
 	  .text-line text {
-		font-family: 'Caesar Dressing', cursive;
+		font-family: 'Climate Crisis', cursive;
 		font-weight: normal;
 		font-style: normal;
-		font-size: 50px;
+		font-size: 32px;
 	  }
 	  
 	  @keyframes dash {
@@ -269,8 +272,20 @@ h2 {
 
 	.menu-list a:hover {
 		text-shadow: 0px 0px 1em #22ffe2;
-		transition: ease 0.5s;
-		letter-spacing: 5px;
+		letter-spacing: 0px;
+		font-weight: 900;
+	}
+
+	.active-menu a{
+		text-shadow: 0px 0px 1em #22ffe2 !important;
+		letter-spacing: 0px !important;
+		font-weight: 900 !important;
+	}
+
+	.menu-list a {
+		letter-spacing: -4px;
+		transition: ease-in-out 0.3s all;
+		font-weight: 100;
 	}
 
 	/*project css*/
@@ -448,6 +463,9 @@ h2 {
 	}
 	
 	@media (max-width:500px) {
+		.reachme-container.rm{
+			font-size: 40px !important;
+		}
 		.reachme-container.home {
 		    column-gap: 70px;
 		}
@@ -458,7 +476,7 @@ h2 {
 			display: block !important;
 		  }
 		.home_title{
-			font-size: 52px !important;
+			font-size: 32px !important;
 		  }
 		img.h1-title {
 			width: 250px;
@@ -469,7 +487,7 @@ h2 {
 			padding-bottom: 10px;
 		}
 		.who-container div{
-			font-size: 25px !important;
+			font-size: 20px !important;
 		}
 		.visual-slider-text-area-lp h3{
 			font-size: 25px;
@@ -478,7 +496,7 @@ h2 {
 			font-size: 45px;
 		}
 		.text-line text{
-			font-size: 45px;
+			font-size: 28px;
 		}
 		.hamburger svg{
 			height: 2.5em;
@@ -528,17 +546,18 @@ h2 {
 	}
 
 	.who-container div {
-		font-size: 40px;
+		font-size: 36px;
 		letter-spacing: 1.6px;
-		line-height: 1.6;
+		line-height: 1.3;
 		text-align: center;
-		font-family: 'Caesar Dressing', cursive;
-		font-weight: normal;
+		font-weight: 200;
+		font-family: 'Poppins', sans-serif;
 	}
 
 	.cv {
 		text-shadow: 0px 0px 0.2em #22ffe2 !important;
 		padding-top: 30px;
+		font-weight: 900 !important;
 	}
 
 	.rounded-text.rotating {
@@ -614,9 +633,10 @@ h2 {
 
 	  .home_title{
 		color: white;
-		font-size: 82px;
-		font-family: 'Caesar Dressing', cursive	;
+		font-size: 52px;
+		font-family: 'Climate Crisis', cursive;
 		text-align: left;
+		cursor: default;
 	  }
 
 	  .overlay-text{
@@ -654,8 +674,14 @@ h2 {
 		left: 90%;
 		transform: translate(-50%, -50%);
 		text-align: center;
-		font-family: 'Caesar Dressing', cursive;
+		font-family: 'Poppins', sans-serif;
 		color: #ffffff;
+		font-weight: 700;
+	}
+
+	.auto-input-name{
+		font-size: 15px;
+		font-weight: 600;
 	}
 
 	.name-card img {
