--- a/sn/stylesheet.css
+++ b/sn/stylesheet.css
@@ -5,6 +5,7 @@
   width: 100%;
   text-transform: uppercase;
   z-index: 1;
+  overflow: hidden;
 }
 .hp-text-container {
   position: fixed;
@@ -38,7 +39,6 @@
   grid-template-columns: 1fr 2fr;
   height: 100vh;
   background: linear-gradient(199deg, #240000, black);
-  overflow: hidden;
 }
 
 .master-wrapper-toggle {
@@ -49,6 +49,7 @@
   margin-left: 100%;
   transition: ease-in-out 0.3s all;
   opacity: 0;
+  overflow-y: scroll;
 }
 
 .menu-container-toggle {
