--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,7 +42,7 @@ a {
 .master-wrapper {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  height: 100vh;
+  height: 100dvh;
   /* background: linear-gradient(199deg, #240000, black); */
   background-color: #0e0e0e;
   transition: all 0.3s ease-in-out;
@@ -821,7 +821,7 @@ h2.forever-dev {
   justify-content: center;
   align-items: center;
   font-weight: 900;
-  height: 100vh;
+  height: 100dvh;
   z-index: 1;
   /* background: linear-gradient(199deg, #240000, black); */
   background-color: #0e0e0e;
