--- a/stylesheet.css
+++ b/stylesheet.css
@@ -268,7 +268,6 @@ div#about-body p {
 span.auto-input {
   font-size: 22px;
   font-weight: 900;
-  padding-left: 10px;
 }
 
 span.lk {
@@ -481,6 +480,7 @@ p.download-btn a {
 
 h2.forever-dev {
   padding-bottom: 50px;
+  font-size: 20px;
 }
 
 @keyframes drift {
