--- a/stylesheet.css
+++ b/stylesheet.css
@@ -205,6 +205,23 @@ svg.text-line {
   stroke: white;
 }
 
+.master-wrapper:before {
+    content: "";
+    opacity: 1;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-image: url("noise.png");
+    animation: noise-animation 1s steps(10) infinite;
+    filter: contrast(.7);
+}
+
+@keyframes noise-animation {
+    100% {
+        background-position: -100% 100%;
+    }
+}
+
 @keyframes dash {
   to {
     stroke-dashoffset: 0;
