--- a/stylesheet.css
+++ b/stylesheet.css
@@ -211,7 +211,7 @@ svg.text-line {
     position: fixed;
     height: 100vh;
     width: 100vw;
-    background-image: url("noise.png");
+    background-image: url("noise.webp");
     animation: noise-animation 1s steps(10) infinite;
     filter: contrast(.7);
 }
